force-app/main/default/objects/Community_Profiles_Permissions__mdt.object
<CustomObject>
    <fields>
        <fullName>Community_Name__c</fullName>
        <label>Community Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Name__c</fullName>
        <label>Permission Set Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Staff</fullName>
                    <default>true</default>
                    <label>Staff</label>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_Profile_Name__c</fullName>
        <label>Temp Profile Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Communities Profiles Permissions</label>
    <pluralLabel>Communities Profiles Permissions</pluralLabel>
</CustomObject>